fixtures/uitests/tests/ui/interface_not_sync_and_send.stderr
error[E0277]: `Cell<u32>` cannot be shared between threads safely
   --> $DIR/counter.uniffi.rs:119:1
    |
119 | uniffi::deps::static_assertions::assert_impl_all!(Counter: Sync, Send);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cell<u32>` cannot be shared between threads safely
    |
    = help: within `Counter`, the trait `Sync` is not implemented for `Cell<u32>`
note: required because it appears within the type `Counter`
   --> $DIR/interface_not_sync_and_send.rs:9:12
    |
9   | pub struct Counter {
    |            ^^^^^^^
note: required by a bound in `assert_impl_all`
   --> $DIR/counter.uniffi.rs:119:1
    |
119 | uniffi::deps::static_assertions::assert_impl_all!(Counter: Sync, Send);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
    = note: this error originates in the macro `uniffi::deps::static_assertions::assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Arc<Counter>: FfiConverter` is not satisfied
   --> $DIR/counter.uniffi.rs:145:9
    |
145 |         <std::sync::Arc<Counter> as uniffi::FfiConverter>::lower(_arc)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FfiConverter` is not implemented for `Arc<Counter>`
    |
    = help: the following implementations were found:
              <Arc<T> as FfiConverter>
note: required by `lower`
   --> $DIR/lib.rs:177:5
    |
177 |     fn lower(obj: Self::RustType) -> Self::FfiType;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Arc<Counter>: FfiConverter` is not satisfied
   --> $DIR/counter.uniffi.rs:160:14
    |
160 |             &<std::sync::Arc<Counter> as uniffi::FfiConverter>::try_lift(ptr).unwrap(),
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FfiConverter` is not implemented for `Arc<Counter>`
    |
    = help: the following implementations were found:
              <Arc<T> as FfiConverter>
note: required by `try_lift`
   --> $DIR/lib.rs:187:5
    |
187 |     fn try_lift(v: Self::FfiType) -> Result<Self::RustType>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
